Fixed styles on demo file; removed visibility of handle and added improvements to transitions

--- a/src/css/mediaelementplayer.css
+++ b/src/css/mediaelementplayer.css
@@ -132,6 +132,7 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
     left: 0;
     z-index: 1;
 }
+
 .mejs__layer {
     z-index: 1;
 }
@@ -304,8 +305,6 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
 .mejs__time-buffering,
 .mejs__time-loaded,
 .mejs__time-current,
-.mejs__time-hovered,
-.mejs__time-handle,
 .mejs__time-float,
 .mejs__time-float-current,
 .mejs__time-float-corner,
@@ -343,33 +342,39 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
     background: rgba(255, 255, 255, .3);
 }
 
-.mejs__time-current,.mejs__time-handle-baby{
+.mejs__time-current, .mejs__time-handle-content {
     background: rgba(255, 255, 255, 0.9);
 }
+
 .mejs__time-hovered {
-  background: rgba(255,255,255,.5);
-  z-index: 10;
+    background: rgba(255, 255, 255, .5);
+    z-index: 10;
 }
-.mejs__time-hovered.negativehover{
+
+.mejs__time-hovered.negative {
     background: rgba(0, 0, 0, 0.2);
 }
-.mejs__time-current,.mejs__time-buffering,.mejs__time-loaded,.mejs__time-hovered{
-	width: 100%;
+
+.mejs__time-current, .mejs__time-buffering, .mejs__time-loaded, .mejs__time-hovered {
+    width: 100%;
     left: 0;
-    transform-origin: 0 0;
     -ms-transform-origin: 0 0;
-    transform:scaleX(0);
-    -ms-transform:scaleX(0);
+    transform-origin: 0 0;
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
     transition: .15s ease-in all;
 }
-.mejs__time-hovered{
-	transition:height .1s cubic-bezier(0.44,0.0,1,1);
+
+.mejs__time-hovered {
+    transition: height .1s cubic-bezier(0.44, 0.0, 1, 1);
 }
-.mejs__time-hovered.nohver {
-    transform: scaleX(0)!important;
-    -ms-transform: scaleX(0)!important;
+
+.mejs__time-hovered.no-hover {
+    -ms-transform: scaleX(0) !important;
+    transform: scaleX(0) !important;
 }
-.mejs__time-handle,.mejs__time-handle-baby{
+
+.mejs__time-handle, .mejs__time-handle-baby {
     position: absolute;
     cursor: pointer;
     width: 20px;
@@ -377,21 +382,24 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
     border: 4px solid transparent;
     z-index: 11;
     left: 0;
-    transform: translateX(0px);
     -ms-transform: translateX(0px);
+    transform: translateX(0px);
 }
-.mejs__time-handle-baby{
+
+.mejs__time-handle-baby {
     left: -4px;
     border: 4px solid rgba(255, 255, 255, 0.9);
-    transform:scale(0);
-    -ms-transform:scale(0);
-    top:-8px;
+    -ms-transform: scale(0);
+    transform: scale(0);
+    top: -8px;
     border-radius: 50%;
 }
-.mejs__time-rail:hover .mejs__time-handle-baby,.mejs__time-rail .mejs__time-handle-baby:focus,.mejs__time-rail .mejs__time-handle-baby:active{
-    transform: scale(1);
+
+.mejs__time-rail:hover .mejs__time-handle-baby, .mejs__time-rail .mejs__time-handle-baby:focus, .mejs__time-rail .mejs__time-handle-baby:active {
     -ms-transform: scale(1);
+    transform: scale(1);
 }
+
 .mejs__time-float {
     position: absolute;
     display: none;
@@ -428,7 +436,7 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
 
 .mejs__long-video .mejs__time-float {
     width: 64px;
-    margin-left:-23px;
+    margin-left: -23px;
 }
 
 .mejs__long-video .mejs__time-float-current {
@@ -703,4 +711,5 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
     padding: 15px;
     display: block;
 }
+
 /* End: Error */
